[tool.poetry]
name = "fastapi-langchain-starter"
version = "0.1.0"
description = ""
authors = ["Dhruvajyoti Sarma <onlinedhruva71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
langchain = "^0.1.5"
langchain-openai = "^0.0.5"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
